src/objects/TRIMDA__TRIMDA_DupeAlertResult__c.object
<CustomObject>
    <customHelpPage>TRIMDA__TRIMDA_Help_DupeAlertsResult</customHelpPage>
    <description>For each processing of a matching process, a history/result records is added to this table. This allows you to keep track of historical data, and provides you with an easy way to find the most recent match resutls</description>
    <fields>
        <fullName>TRIMDA__Advanced_Parameters__c</fullName>
        <label>Advanced Parameters</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__AlertType__c</fullName>
        <description>This is the Alert Type which was used for the matching</description>
        <inlineHelpText>This is the Alert Type which was used for the matching</inlineHelpText>
        <label>Alert Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__DataTrim_Dupe_Alert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Alert</label>
        <referenceTo>TRIMDA__TRIMDA_DupeAlerts__c</referenceTo>
        <relationshipName>R00N40000001NaSsEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Filter_Master_Data__c</fullName>
        <label>Filter: Master</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Filter_Secondary_Data__c</fullName>
        <label>Filter: Secondary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__MatchBinding__c</fullName>
        <description>This is the Match Level which was used for the matching</description>
        <inlineHelpText>This is the Match Level which was used for the matching</inlineHelpText>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__New_Dupes_Found__c</fullName>
        <description>Possible duplicates excluding pairs which already have been resolved or flagged as false dupes</description>
        <label>New Dupes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__No_of_Exact__c</fullName>
        <label>Exact Match</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__No_of_Loose__c</fullName>
        <label>Loose Match</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__No_of_Medium__c</fullName>
        <label>Medium Match</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__No_of_Supertight__c</fullName>
        <label>SuperTight Match</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__No_of_Tight__c</fullName>
        <label>Tight Match</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Possible_DupesFound__c</fullName>
        <label>Total No of Dupes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Records_in_Target__c</fullName>
        <label>Master Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Records_newandchanged__c</fullName>
        <description>Number of records added or changed since Last Run Date</description>
        <inlineHelpText>Number of records added or changed since Last Run Date</inlineHelpText>
        <label>Secondary Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Result__c</fullName>
        <label>Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Run_Date__c</fullName>
        <label>Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score100__c</fullName>
        <label>100% Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SurvivorshipRules__c</fullName>
        <description>This is the Survivorship Rule which was used for the matching</description>
        <inlineHelpText>This is the Survivorship Rule which was used for the matching</inlineHelpText>
        <label>Survivorship Rules</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Target__c</fullName>
        <description>This is the Target which was used for the matching</description>
        <inlineHelpText>This is the Target which was used for the matching</inlineHelpText>
        <label>Target Setting</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DataTrim Dupe Alert Result</label>
    <listViews>
        <fullName>TRIMDA__AllDupeAlertResults</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__DataTrim_Dupe_Alert__c</columns>
        <columns>TRIMDA__Run_Date__c</columns>
        <columns>TRIMDA__Result__c</columns>
        <columns>TRIMDA__MatchBinding__c</columns>
        <columns>TRIMDA__Records_newandchanged__c</columns>
        <columns>TRIMDA__Records_in_Target__c</columns>
        <columns>TRIMDA__Possible_DupesFound__c</columns>
        <columns>TRIMDA__New_Dupes_Found__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Dupe Alert Results</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__RecentDupeAlertResults</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>TRIMDA__DataTrim_Dupe_Alert__c</columns>
        <columns>TRIMDA__Run_Date__c</columns>
        <columns>TRIMDA__Result__c</columns>
        <columns>TRIMDA__MatchBinding__c</columns>
        <columns>TRIMDA__Records_newandchanged__c</columns>
        <columns>TRIMDA__Records_in_Target__c</columns>
        <columns>TRIMDA__Possible_DupesFound__c</columns>
        <columns>TRIMDA__New_Dupes_Found__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__Run_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Recent Dupe Alert Results</label>
    </listViews>
    <nameField>
        <displayFormat>AR{000000}</displayFormat>
        <label>Alert Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataTrim Dupe Alert Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>